--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,12 @@
     <string name="title_activity_authenticator">Loystar</string>
     <string name="sign_up_cancelled">Sign up cancelled</string>
     <string name="unknown_error">An unknown error occurred</string>
-    <string name="no_internet_connection">No internet connection</string>
+    <string name="no_internet_connection">Connection failed! please check your connection and try again.</string>
     <string name="error_internet_connection_timed_out">Error connection timed out. Please check your connection and try again.</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
+    <string name="error_login_credentials">Email or Password is incorrect. Please try again!</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -37,4 +38,6 @@
     <string name="logo">logo</string>
     <string name="title_activity_merchant_sign_up">Sign Up</string>
     <string name="title_activity_forgot_password">Forgot Password</string>
+    <string name="something_went_wrong">Something went wrong! Please try again</string>
+    <string name="title_activity_app_intro">intro</string>
 </resources>
