--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="simple_points">SimplePoints</string>
+    <string name="stamps_program">StampsProgram</string>
     <string name="logo">logo</string>
     <string name="title_activity_merchant_sign_up">Sign Up</string>
     <string name="title_activity_forgot_password">Forgot Password</string>
