--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     </string>
     <string name="simple_points">SimplePoints</string>
     <string name="stamps_program">StampsProgram</string>
+    <string name="simple_points_program_label">Simple Points Program</string>
+    <string name="stamps_program_label">Stamps Program</string>
     <string name="logo">logo</string>
     <string name="title_activity_merchant_sign_up">Sign Up</string>
     <string name="title_activity_forgot_password">Forgot Password</string>
@@ -126,7 +128,7 @@
     <string name="home_menu">Home</string>
     <string name="record_sale">Sell</string>
     <string name="customers_title">Customers</string>
-    <string name="campaigns">Campaigns</string>
+    <string name="campaigns">Programs</string>
     <string name="title_customer_list">Customers</string>
     <string name="title_customer_detail">Customer Detail</string>
     <string name="no_customers_found">No customers found!</string>
@@ -230,4 +232,13 @@
     <string name="title_activity_pay_subscription">Pay Subscription</string>
     <string name="pay_subscription">Pay subscription</string>
     <string name="title_activity_send_sms">Message</string>
+    <string name="title_activity_loyalty_programs_list">My Loyalty Programs</string>
+    <string name="title_loyaltyprogram_list">My Loyalty Programs</string>
+    <string name="title_loyaltyprogram_detail">LoyaltyProgram Detail</string>
+    <string name="no_programs_found">No programs found</string>
+    <string name="add_program">Add program</string>
+    <string name="program_type_label">Type:</string>
+    <string name="program_target_label">Target:</string>
+    <string name="reward_label">Reward:</string>
+    <string name="program_target_value">%1$s %2$s</string>
 </resources>
